added role cloud_providers, added inventories directory to place dynamic inventory plugins from different clouds/vendors with their own group_vars, added variable cloud to inventory related cloud

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -322,7 +322,7 @@ stdout_callback = debug
 [inventory]
 # List of enabled inventory plugins and the order in which they are used.
 #enable_plugins = aws_ec2 #host_list, script, auto, yaml, ini, toml
-#enable_plugins = aws_ec2
+enable_plugins = gcp_compute,aws_ec2, host_list, script, auto, yaml, ini, toml
 # Ignore these extensions when parsing a directory as inventory source
 #ignore_extensions = .pyc, .pyo, .swp, .bak, ~, .rpm, .md, .txt, ~, .orig, .ini, .cfg, .retry
 
