--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,12 +1,11 @@
 cluster_name: "Yugabyte_cluster"
 type_instance: "t2.micro"
 region: "eu-central-1"
-cloud: aws
 # aws.networking
-aws_region:     'eu-central-1'
 vpc_name:       'Yugabyte_VPC_Res'
 vpc_cidr_2:     '185'
 vpc_cidr: '10.{{vpc_cidr_2}}.0.0/16'
+vpc_create: true
 
 subnets:
   - type: public
@@ -33,12 +32,13 @@ securitygroup_name: "Yugabyte_security_group"
 ec2_tag: "Yugabyte_nodes"
 ansible_user: centos 
 #The local path to which we would save our EC2 Private Key
-ec2_key_directory: "./"
+ec2_key_directory: "~/Documents/yugabyte_exam/key.ppk"
 keypair_name: "ec2_key_pair"
-key_location: "~/Documents/yugabyte_exam/key.ppk"
 
-conf_dir: "~/yb-conf"
-software_dir: "~/yb-software"
+base_install: "{{ ansible_env.HOME }}/yugabyte_db"
+data_dir: "{{ base_install }}/data_dir"
+conf_dir: "{{ base_install }}/yb-conf"
+software_dir: "{{ base_install }}/yb-software"
 
 YB_VERSION: 2.1.2.0
 
@@ -49,8 +49,8 @@ ulimits_security:
   - { limit_type: '-', limit_item: 'nofile', value: 1048576 }
   - { limit_type: '-', limit_item: 'nproc', value: 12000 }
 
-master_dir: "~/master"
-tserver_dir: "~/tserver"
+master_dir: "{{ base_install }}/master"
+tserver_dir: "{{ base_install }}/tserver"
 
 linux_distribution: "centos"
 centos_release: "7"
