--- a/roles/cloud_providers/tasks/aws/ec2_instances.yml
+++ b/roles/cloud_providers/tasks/aws/ec2_instances.yml
@@ -89,6 +89,9 @@
 - name: debug
   debug: msg="{{ ec2_hosts }}"
 
+- pause:
+    seconds: 5
+    
 # tasks file for yugabyte_install
 - name: Add EC2 instances as known hosts
   known_hosts:
@@ -98,9 +101,9 @@
   until: "item[0].public_dns_name is defined"
   retries: 30
   delay: 5
+  ignore_errors: True
   with_items:
     - "{{ ec2_hosts }}"
-
 
 - name: Wait for SSH to come up
   delegate_to: "{{ item.public_dns_name }}"
