--- a/roles/yugabyte_common/tasks/main.yml
+++ b/roles/yugabyte_common/tasks/main.yml
@@ -1,3 +1,4 @@
 - include: prerequisites.yml
+- include: stop_yugabyte.yml
 - include: download_yugabyte.yml
-
+- include: "{{ cloud }}_get_facts.yml"
