--- a/roles/yugabyte_common/tasks/prerequisites.yml
+++ b/roles/yugabyte_common/tasks/prerequisites.yml
@@ -1,4 +1,3 @@
----
 # tasks file for yugabyte_install
 - name: Add EC2 instances as known hosts
   known_hosts:
@@ -10,12 +9,12 @@
     name: "{{ packages_centos }}"
   become: true
   
-- name: configure system settings, file descriptors and number of threads
+- name: configure ulimits for yugabyte
   pam_limits:
     domain: "{{ ansible_user }}"
     limit_type: "{{item.limit_type}}"
     limit_item: "{{item.limit_item}}"
-    value: "{{item.value}}"
+    value: "{{ item.value }}"
   with_items:
     - "{{ ulimits_security }}"
   become: true
@@ -38,14 +37,20 @@
     path: "{{ item }}"
     state: absent
   with_items:
-    - "{{ software_dir }}"
-    - "{{ conf_dir }}"
-    - "~/yb-data"
-    - "~/yb"
-    - "~/pg_data"
-    - "{{ master_dir }}"
-    - "{{ tserver_dir }}"
+    - "{{ base_install }}"
 
+- name: Creates base installation directory
+  file:
+    path: "{{ item }}"
+    state: directory
+    mode: 0755
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
+  with_items:
+     - "{{ base_install }}"
+     - "{{ data_dir }}"
+  become_user: "{{ ansible_user }}"
+  
 - name: Creates directory
   file:
     path: "{{ item }}"
