--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -26,15 +26,14 @@ igw_name: "Yugabyte_igw"
  
 securitygroup_name: "Yugabyte_security_group"
 
-#master_dir: "~/master"
-#tserver_dir: "~/tserver"
-
 ec2_tag: "Yugabyte_nodes"
 ansible_user: centos 
 #The local path to which we would save our EC2 Private Key
-ec2_key_directory: "~/Documents/yugabyte_exam/key.ppk"
+#if the keypair name alreay exists within amazon, it will pick the location key, otherwise it stores it in that directory
+ec2_key_directory: "PATH_PRIVATE_KEY"
 keypair_name: "ec2_key_pair"
 
+#base yugabyte directory wherein all yugabyte related files will reside
 base_install: "{{ ansible_env.HOME }}/yugabyte_db"
 data_dir: "{{ base_install }}/data_dir"
 conf_dir: "{{ base_install }}/yb-conf"
