--- a/main.yml
+++ b/main.yml
@@ -12,30 +12,9 @@
   roles:
     - yugabyte_common
     - yugabyte_setup
-
-- hosts: tag_Env_Yugabyte_nodes_master
-  gather_facts:	no
-  pre_tasks:
-    - setup: # gather facts only when needed not every time
-  roles:
-    - role: cluster_control
-      vars:
-        file_config: master.conf
-        process: yb-master
-        basedir_yugabyte: "{{ master_dir }}"
-       
-- hosts: tag_Env_Yugabyte_nodes*
-  gather_facts:	no
-  pre_tasks:
-    - setup:
-  roles:
-    - role: cluster_control
-      vars:
-        file_config: "tserver.conf"
-        process: yb-tserver
-        basedir_yugabyte: "{{ tserver_dir }}"
+    - cluster_control
         
-- hosts: tag_Name_Yugabyte_nodes_master
+- hosts: tag_Env_Yugabyte_nodes_master
   gather_facts:	no
   pre_tasks:
     - setup:
