--- a/roles/configure_region_placement/tasks/aws_master_ui_facts.yml
+++ b/roles/configure_region_placement/tasks/aws_master_ui_facts.yml
@@ -1,22 +1,12 @@
 ---
 # tasks file for configure_region_placement for aws
-
-- name: Getting master host dns
-  vars:
-    query: "tag_Env_{{ ec2_tag }}_master[]"
-  set_fact:
-    master_dns1: "{{ hostvars[inventory_hostname].groups | json_query(query) }}"
-
-- name: debug name
-  debug: msg="{{ master_dns1 }}"
-
-- name: set master addresses on port 7100
-  set_fact:
-    MASTER_RPC_ADDRS1: "{{ MASTER_RPC_ADDRS1 | default([]) + [':'.join((item,'7100'))] }}"
-  loop: "{{ master_dns1 | list }}"
+- name: do something
+  include_role:
+    name: yugabyte_common
+    tasks_from: aws_get_facts.yml
 
 - name: debug dns
-  debug: msg="{{ MASTER_RPC_ADDRS1 }}"
+  debug: msg="{{ MASTER_RPC_ADDRS }}"
 
 - name: Get facts from all availability zones
   local_action:
@@ -47,11 +37,11 @@
   debug: msg="{{ values_az }}"
 
 - name: Configuring az distribution
-  shell: '{{ master_dir }}/bin/yb-admin --master_addresses {{ MASTER_RPC_ADDRS1 | join(",") }} modify_placement_info {{ values_az | join(",") }} {{ az_count }}'
+  shell: '{{ master_dir }}/bin/yb-admin --master_addresses {{ MASTER_RPC_ADDRS | join(",") }} modify_placement_info {{ values_az | join(",") }} {{ az_count }}'
   
 - name: Check that you can connect (GET) to a page and it returns a status 200
   uri:
-    url: "http://{{ hostvars[inventory_hostname].public_dns_name }}:7000/cluster-config"
+    url: "http://{{ hostvars[inventory_hostname].public_hostname }}:7000/cluster-config"
   register: page_az
   until: "page_az.status == 200"
   retries: 100
@@ -63,4 +53,4 @@
 - name: Access Yugabyte DB panel on these master servers
   debug: msg="{{ item }}:7000"
   with_items:
-    - "{{ master_dns1 }}"
+    - "{{ master_ips }}"
