--- a/roles/yugabyte_common/tasks/aws_get_facts.yml
+++ b/roles/yugabyte_common/tasks/aws_get_facts.yml
@@ -1,23 +1,23 @@
-- name: Getting master host dns
-  vars:
-    query: "tag_Env_{{ ec2_tag }}_master[]"
-  set_fact:
-    master_dns: "{{ hostvars[inventory_hostname].groups | json_query(query) }}"
+- name: Get facts from all master nodes
+  local_action:
+    module: ec2_instance_info
+    region: "{{ region }}"
+    filters:
+      "tag:Env": "Yugabyte_nodes_master"
+  register: instance_facts
 
-- name: Getting tservers dns
-  vars:
-    query: "tag_Env_{{ ec2_tag }}[]"
+- name: print facts
   set_fact:
-    tserver_dns: "{{ hostvars[inventory_hostname].groups | json_query(query) }}"
+    master_ips: "{{ instance_facts | json_query('instances[?state.name == `running`].public_dns_name') | list }}"
 
 - name: set master addresses on port 7100
   set_fact:
     MASTER_RPC_ADDRS: "{{ MASTER_RPC_ADDRS | default([]) + [':'.join((item,'7100'))] }}"
-  loop: "{{ master_dns | list}}"
+  loop: "{{ master_ips | list}}"
 
 - name: set hostname facts for tservers and tmaster servers
   set_fact:
-    public_dns_name: "{{ hostvars[inventory_hostname].public_dns_name }}"
+    public_hostname: "{{ hostvars[inventory_hostname].public_dns_name }}"
     availability_zone: "{{ hostvars[inventory_hostname].placement.availability_zone }}"
 
 - name: debug dns
